tabindex,accesskey,some cheanges

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
 </head>
-<body onload="displaySport(); accesskey()">
+<body onload="accesskey();displaySport()">
 
 <nav class="topnav" id="myTopnav">
     <div tabindex="0"> <a href="../../Home/index.html" class="active" id="home">Home</a> </div>
