--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="accesskey()">
 
-<!--navagation-->
+<!--******************************************navagation *********************-->
 <nav class="topnav" id="myTopnav">
     <div tabindex="0">  <a href="../../Home/index.html" class="active" id="home">Home</a> </div>
      <div class="dropdown" tabindex="0">
