--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
@@ -37,7 +37,7 @@
     </div>
     <div tabindex="0"> <a href="../AboutUs/AboutUs.html" id="About">About us</a></div>
     <div tabindex="0"> <a href="../Contact%20us%20/Contact.html" id="Contact">Contact us</a> </div>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
 
